@@ -9,6 +9,7 @@ Issue #3087 Enter-BCContainer on PowerShell 7 doesn't seem to work
 Add parameters `PreCompileApp` and `PostCompileApp` to `Run-AlPipeline` to allow running custom scripts before and after compiling an app.
 Add parameter `EnableExternalRulesets` to compile functions to support new alc feature.
 Issue #3099 Compile-AppWithBcCompilerFolder: The variable '$platformversion' cannot be retrieved because it has not been set. 
+Flush-ContainerHelperCache will now also run docker image prune with a filter until=xxh (based on keepdays)
 
 5.0.3
 Issue #3051 Unable to import .rapidstart file - The property 'Code' cannot be found on this object
